# pingola

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: bench-tools-build.yml  candidate-build.yml  ci.yml
bench/: allocator_compare.sh  allocator_images.sh  backend.py  backend.rs  compare.sh  final-remote-2cpu-1g-20260718.md  h1-fastpath-0.5cpu-1g-20260716.md  h2_tuning.sh  pgo_client.rs  pgo_compare.sh  pgo_compare_three.sh  pgo_train.sh  profile.sh  proxy_overhead.sh  summarize_allocator_images.py  summarize_compare.py  summarize_h2load.py  summarize_resources.py  tcmalloc-0.5cpu-1g-20260713.md  tls_provider_compare.sh  wrk-close.lua  wrk-keepalive.lua
bench/candidates/: build.sh  compare.sh  configure.sh  smoke.sh
config/: benchmark.yaml  pingola.yaml  pingora.yaml
scripts/: certbot-deploy-hook.sh  validate-certificates.sh
src/: allocator.rs  config.rs  content_encoding.rs  gateway.rs  limits.rs  main.rs  preflight.rs  static_files.rs
tests/: backend.py  docker_runtime.sh  downstream_admission.rs  h2_downstream_timeout.rs  h2_matrix_backend.py  http2_matrix.sh  http2_nginx_repro.sh  integration.sh  limit_backend.py  limit_isolation.sh  listeners_health.sh  retries.sh  retry_backend.py  runtime_preflight.sh  service_backend.py  service_matrix.sh  static_global_limit.sh  upstream_http2.rs
tests/fixtures/: integration.yaml
tests/fixtures/www/: index.html
tools/: bolt-train.sh
