[package]
name = "pingola"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A production-oriented Pingora reverse proxy replacing the JBS Nginx gateway"
repository = "https://github.com/TAE-OK-11/pingola"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
brotli = "8.0"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6.1"
env_logger = "0.11"
flate2 = "1.1"
http = "1.3"
httpdate = "1.0"
ipnet = { version = "2.11", features = ["serde"] }
log = "0.4"
lru = "0.16"
mime_guess = "2.0"
parking_lot = "0.12"
percent-encoding = "2.3"
pingora = { version = "0.8.1", features = ["proxy", "rustls"] }
rustls = { version = "0.23.37", default-features = false, features = ["aws_lc_rs", "logging", "prefer-post-quantum", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "rt-multi-thread"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3.23"

# Pingora 0.8.1's rustls adapter hardcodes Ring. Keep the upstream API while
# selecting AWS-LC for both Pingora and this binary, avoiding two crypto stacks.
[patch.crates-io]
pingora-rustls = { path = "vendor/pingora-rustls-aws-lc" }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = "symbols"
