[package]
name = "jbs-pingora"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A production-oriented Pingora reverse proxy replacing the JBS Nginx gateway"
repository = "https://github.com/TAE-OK-11/pingora"

[[bin]]
name = "pingora"
path = "src/main.rs"

[features]
default = ["tcmalloc"]
jemalloc = ["dep:tikv-jemalloc-ctl", "dep:tikv-jemallocator"]
tcmalloc = ["dep:tcmalloc-better"]
system-allocator = []

[dependencies]
anyhow = "1.0"
ahash = "0.8"
arrayvec = "0.7"
async-trait = "0.1"
brotli = "8.0"
bytes = "1.12"
clap = { version = "4.6", features = ["derive", "env"] }
dashmap = "6.2"
env_logger = "0.11"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
http = "1.4"
httpdate = "1.0"
ipnet = { version = "2.12", features = ["serde"] }
log = "0.4"
lru = "0.18"
mime_guess = "2.0"
parking_lot = "0.12"
percent-encoding = "2.3"
cloudflare-pingora = { package = "pingora", version = "0.8.1", default-features = false, features = ["proxy", "rustls"] }
rustls = { version = "0.23.42", default-features = false, features = ["aws_lc_rs", "logging", "prefer-post-quantum", "std", "tls12"] }
rustls-pemfile = "2.2"
rustix = { version = "1.1", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.29"
socket2 = "0.6"
tcmalloc-better = { version = "0.1.19", optional = true }
tikv-jemalloc-ctl = { version = "0.7", features = ["stats", "use_std"], optional = true }
tikv-jemallocator = { version = "0.7", features = ["stats"], optional = true }
tokio = { version = "1.52", features = ["fs", "net", "rt-multi-thread", "sync", "time"] }
zstd = "0.13"

[dev-dependencies]
h2 = "0.4"
tempfile = "3.27"

# Pingora 0.8.1's rustls adapter hardcodes Ring. Keep the upstream API while
# selecting AWS-LC for both Pingora and this binary, avoiding two crypto stacks.
[patch.crates-io]
pingora-core = { path = "vendor/pingora-core-0.8.1" }
pingora-rustls = { path = "vendor/pingora-rustls-aws-lc" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
